--- a/styles.css
+++ b/styles.css
@@ -16,14 +16,15 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
-#canvas-container {
-    flex-grow: 1; /* Expand to fill available space */
+.canvas-container {
+    flex-grow: 1;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
-.chat {
+.chat-container {
     position: absolute;
     top: 10px;
     left: 10px;
@@ -35,7 +36,7 @@ body {
     padding: 10px;
 }
 
-.player-list {
+.player-list-container {
     position: absolute;
     top: 10px;
     right: 10px;
