--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,27 @@ body {
     background-color: #f1f1f1;
 }
 
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("background-image.jpg") center/cover fixed;
+    filter: blur(10px); /* Add a blur effect to the background */
+}
+
+.nickname-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 1; /* Keep the nickname container on top of the background */
+    width: 100%;
+    height: 100%;
+}
+
 .centered {
     display: flex;
     align-items: center;
