--- a/styles.css
+++ b/styles.css
@@ -4,25 +4,6 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background-color: #f1f1f1;
-}
-
-.centered {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-}
-
-#overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.9);
-    z-index: 1;
 }
 
 .canvas-container {
@@ -36,9 +17,8 @@ body {
 
 .chat-container {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
     width: 250px;
     height: 300px;
     background: #ffffff;
@@ -48,51 +28,10 @@ body {
     flex-direction: column;
 }
 
-.chat h3 {
-    margin: 0;
-    color: #333333;
-    font-size: 1.2em;
-}
-
-.chat-messages {
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 10px;
-}
-
-#chat-input {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-}
-
-#message-input {
-    flex-grow: 1;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-#send-message {
-    background-color: #0074d9;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-    margin-left: 5px;
-    font-weight: bold;
-}
-
-#send-message:hover {
-    background-color: #0056b3;
-}
-
 .player-list-container {
     position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
+    top: 0;
+    right: 0;
     width: 200px;
     height: 300px;
     background: #ffffff;
@@ -102,19 +41,4 @@ body {
     flex-direction: column;
 }
 
-.player-list h3 {
-    margin: 0;
-    color: #333333;
-    font-size: 1.2em;
-}
-
-#player-list {
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 10px;
-}
-
-.scrollable {
-    overflow: auto;
-    max-height: 100%;
-}
+/* Rest of the CSS remains the same */
