--- a/styles.css
+++ b/styles.css
@@ -4,24 +4,17 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background-color: #f1f1f1;
 }
 
 .centered {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-}
-
-#overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     background: rgba(255, 255, 255, 0.9);
-    z-index: 1;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .canvas-container {
@@ -35,83 +28,60 @@ body {
 
 .chat-container {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 10px;
+    left: 10px;
     width: 250px;
     height: 300px;
     background: #ffffff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    padding: 10px;
     display: flex;
     flex-direction: column;
-}
-
-.chat h3 {
-    margin: 0;
-    color: #333333;
-    font-size: 1.2em;
 }
 
 .chat-messages {
     flex-grow: 1;
     overflow-y: auto;
+}
+
+.chat-container h3 {
+    margin: 0;
+    color: #333333;
+    font-size: 1.2em;
+}
+
+.player-list-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 200px;
+    height: 300px;
+    background: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 10px;
 }
 
-#chat-input {
+.message-input-container {
     display: flex;
-    align-items: center;
-    padding: 10px;
 }
 
-#message-input {
+input[type="text"] {
     flex-grow: 1;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    margin-right: 5px;
 }
 
-#send-message {
+button {
     background-color: #0074d9;
     color: white;
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
     cursor: pointer;
-    margin-left: 5px;
     font-weight: bold;
 }
 
-#send-message:hover {
-    background-color: #0056b3;
-}
-
-.player-list-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 200px;
-    height: 300px;
-    background: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    display: flex;
-    flex-direction: column;
-}
-
-.player-list h3 {
-    margin: 0;
-    color: #333333;
-    font-size: 1.2em;
-}
-
-#player-list {
-    flex-grow: 1;
-    overflow-y: auto;
-    padding: 10px;
-}
-
-.scrollable {
-    overflow: auto;
-    max-height: 100%;
+input[type="color"] {
+    margin: 5px;
 }
