--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,29 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
 }
 
-#loginContainer, #lobbyContainer, #gameContainer {
-    margin-top: 50px;
+.game-container {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    border: 2px solid #000;
 }
 
-input, button {
-    margin-top: 10px;
+.snake {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #00f;
 }
 
-canvas {
-    border: 1px solid #000;
-    margin-top: 20px;
-}
-
-#countdown {
-    font-size: 2em;
-}
-
-#score {
-    font-size: 1.5em;
-    margin-bottom: 10px;
+.food {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #f00;
 }
