--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,10 @@ body {
     height: 10px;
     background-color: #f00;
 }
+
+#score {
+    text-align: center;
+    margin-top: 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
