--- a/styles.css
+++ b/styles.css
@@ -4,32 +4,36 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #222;
+    background-color: white; /* White background */
 }
 
-#maze {
+.maze {
     display: grid;
     grid-template-columns: repeat(10, 40px);
     grid-template-rows: repeat(10, 40px);
     gap: 2px;
-    border: 2px solid #fff;
+    border: 2px solid black; /* Black border for maze */
 }
 
 .cell {
     width: 40px;
     height: 40px;
-    background-color: #222;
-    border: 2px solid #fff;
+    background-color: white; /* White cells */
+    border: 2px solid black;
 }
+
 .start {
     background-color: green;
 }
+
 .end {
     background-color: red;
 }
+
 .wall {
-    background-color: #000;
+    background-color: black; /* Black walls */
 }
+
 .visited {
     background-color: #777;
 }
