--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: white; /* White background */
+    background-color: white;
 }
 
 .maze {
@@ -12,13 +12,13 @@ body {
     grid-template-columns: repeat(10, 40px);
     grid-template-rows: repeat(10, 40px);
     gap: 2px;
-    border: 2px solid black; /* Black border for maze */
+    border: 2px solid black;
 }
 
 .cell {
     width: 40px;
     height: 40px;
-    background-color: white; /* White cells */
+    background-color: white;
     border: 2px solid black;
 }
 
@@ -31,9 +31,9 @@ body {
 }
 
 .wall {
-    background-color: black; /* Black walls */
+    background-color: black;
 }
 
-.visited {
-    background-color: #777;
+.player {
+    background-color: blue;
 }
