--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,28 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 .maze {
-    display: grid;
-    grid-template-columns: repeat(10, 40px);
-    grid-template-rows: repeat(10, 40px);
-    gap: 2px;
-    border: 2px solid black;
-}
-
-.cell {
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    border: 2px solid black;
-}
-
-.start {
-    background-color: green;
-}
-
-.end {
-    background-color: red;
+  width: 300px;
+  height: 300px;
+  border: 2px solid black;
+  position: relative;
 }
 
 .wall {
-    background-color: black;
+  background-color: black;
+  width: 30px;
+  height: 30px;
+  position: absolute;
 }
 
 .player {
-    background-color: blue;
+  background-color: red;
+  width: 30px;
+  height: 30px;
+  position: absolute;
 }
